# dagster-jaffle-shop

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
dagster_jaffle_shop/: __init__.py  io_managers.py  resources.py  utils.py
dagster_jaffle_shop/assets/models/: customers.py  orders.py
dagster_jaffle_shop/assets/models/seeds/: raw_customers.py  raw_orders.py  raw_payments.py
dagster_jaffle_shop/assets/models/staging/: stg_customers.py  stg_orders.py  stg_payments.py
dagster_jaffle_shop/assets/system/: duckdb_db.py
dagster_jaffle_shop/jobs/: models.py  profiling.py
dagster_jaffle_shop/utils/: __init__.py  helpers.py  io_managers.py  queries.py  resources.py
tests/: test_duckdb.py  test_jinja.py
