[tool.poetry]
name = "dagster-jaffle-shop"
version = "0.1.0"
description = ""
authors = ["Stephen Bailey <stkbailey@gmail.com>"]
readme = "README.md"
packages = [{include = "dagster_jaffle_shop"}]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^1.0.12"
dagit = "^1.0.12"
Jinja2 = "^3.1.2"
duckdb = "^0.5.1"
pandas = "^1.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
